# kpasslib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: dart.yml
assets/test/: merge.kdbx
example/: example.dart
lib/: constants.dart  kpasslib.dart
lib/src/crypto/: aes.dart  argon2.dart  blake2b.dart  chacha20.dart  crypto_engine.dart  crypto_utils.dart  hashed_block_transform.dart  hmac_block_transform.dart  key_encryptor_aes.dart  key_encryptor_kdf.dart  protect_salt_generator.dart  protected_value.dart  salsa20.dart  stream_cipher.dart
lib/src/kdbx/: constants.dart  kdbx_autotype.dart  kdbx_binaries.dart  kdbx_credentials.dart  kdbx_custom_data.dart  kdbx_database.dart  kdbx_entry.dart  kdbx_error.dart  kdbx_group.dart  kdbx_header.dart  kdbx_item.dart  (+3 more)
native/kreepto-rust/: Cargo.toml  README.md  build.sh
native/kreepto-rust/src/: lib.rs
test/: test_resources.dart
test/crypto/: aes_test.dart  argon2_test.dart  chacha20_test.dart  crypto_utils_test.dart  hashed_block_transform_test.dart  hmac_block_transform_test.dart  key_encryptor_aes_test.dart  key_encryptor_kdf_test.dart  protected_salt_generator_test.dart  protected_value_test.dart  salsa20_test.dart
test/kdbx/: kdbx_binaries_test.dart  kdbx_credentials_test.dart  kdbx_custom_data_test.dart  kdbx_database_test.dart  kdbx_header_test.dart  kdbx_merge_test.dart  kdbx_uuid_test.dart  test_database.dart  test_entry.dart  test_group.dart  test_times.dart
test/utils/: byte_utils_test.dart  parameters_map_test.dart  xml_utils_test.dart
(+14 files in other folders)
