[package]
name = "kreepto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[dependencies]
argon2 = "0.4"
password-hash = "0.3"
aes = "0.9"
chacha20 = "0.9"
salsa20 = "0.9"
